form alignment issue fix

--- a/src/app/modules/attribute/components/new_attribute/core-details/core-details.component.scss
+++ b/src/app/modules/attribute/components/new_attribute/core-details/core-details.component.scss
@@ -52,8 +52,48 @@
     border-radius: 4px;
     font-family: 'Poppins';
     background: white;
-    border-left-width: 2px solid #438ce7;
+    border-left-width: 2px;
+    border-left-color: #438ce7;
     outline: none;
+}
+.ip-other-info{
+  border-left-width: 2px;border-left-color: #438ce7;
+}
+.sel-small-field{
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-family: 'Poppins';
+  height: 30px;
+  background-color: white;
+}
+.rep-att-field{
+  border-left-width: 2px;
+  border-left-color: #438ce7;
+  width: 17%; 
+}
+.code-li-name{
+  width: 16%; 
+}
+.code-val{
+  width: 15%; margin-right: 4px;
+}
+.f-min-val{
+  border-left-width: 2px;
+  border-left-color: #438ce7;
+  width: 16%; height: 25px; border-left-width: 2px;
+}
+.f-max-val{
+  width: 17%; height: 25px;
+}
+.f-d-type{
+  width: 18%; height: 30px;
+}
+.f-li-mod{
+  width: 80%; height: 30px; border-left-width: 2px;border-left-color: #438ce7
+}
+.f-search-data{
+  width: 97%;
 }
 .description{
     padding-left: 10px;
